--- a/programming/language/python/python-cups/pspec.xml
+++ b/programming/language/python/python-cups/pspec.xml
@@ -2,8 +2,8 @@
 <!DOCTYPE PISI SYSTEM "http://www.pardus.org.tr/projeler/pisi/pisi-spec.dtd">
 <PISI>
     <Source>
-        <Name>pycups</Name>
-        <Homepage>http://cyberelk.net/tim/software/pycups</Homepage>
+        <Name>python-cups</Name>
+        <Homepage>http://cyberelk.net/tim/software/python-cups</Homepage>
         <Packager>
             <Name>Ozan Çağlayan</Name>
             <Email>ozan@pardus.org.tr</Email>
@@ -11,18 +11,21 @@
         <License>GPLv2</License>
         <IsA>library</IsA>
         <Summary>Python interface to the CUPS API</Summary>
-        <Description>pycups contains python bindings to wrap the CUPS API.</Description>
-        <Archive sha1sum="020e898a9970b2107af7b7f769574519d64d4f89" type="tarbz2">http://cyberelk.net/tim/data/pycups/pycups-1.9.53.tar.bz2</Archive>
+        <Description>python-cups contains python bindings to wrap the CUPS API.</Description>
+        <Archive sha1sum="020e898a9970b2107af7b7f769574519d64d4f89" type="tarbz2">http://cyberelk.net/tim/data/python-cups/python-cups-1.9.53.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>cups-devel</Dependency>
         </BuildDependencies>
     </Source>
 
     <Package>
-        <Name>pycups</Name>
+        <Name>python-cups</Name>
         <RuntimeDependencies>
             <Dependency>cups</Dependency>
         </RuntimeDependencies>
+        <Replaces>
+            <Package>pycups</Package>
+        </Replaces>
         <Files>
             <Path fileType="library">/usr/lib</Path>
             <Path fileType="doc">/usr/share/doc</Path>
