--- a/programming/language/python/python-smbc/pspec.xml
+++ b/programming/language/python/python-smbc/pspec.xml
@@ -2,8 +2,8 @@
 <!DOCTYPE PISI SYSTEM "http://www.pardus.org.tr/projeler/pisi/pisi-spec.dtd">
 <PISI>
     <Source>
-        <Name>pysmbc</Name>
-        <Homepage>http://cyberelk.net/tim/software/pysmbc</Homepage>
+        <Name>python-smbc</Name>
+        <Homepage>http://cyberelk.net/tim/software/python-smbc</Homepage>
         <Packager>
             <Name>Ozan Çağlayan</Name>
             <Email>ozan@pardus.org.tr</Email>
@@ -11,18 +11,21 @@
         <License>GPLv2</License>
         <IsA>library</IsA>
         <Summary>Python interface to the libsmbclient library</Summary>
-        <Description>pysmbc is a Python binding for the libsmbclient library.</Description>
-        <Archive sha1sum="1963af6e7fcb75733d5a398ffc0c4578532bc61d" type="tarbz2">http://cyberelk.net/tim/data/pysmbc/pysmbc-1.0.10.tar.bz2</Archive>
+        <Description>python-smbc is a Python binding for the libsmbclient library.</Description>
+        <Archive sha1sum="1963af6e7fcb75733d5a398ffc0c4578532bc61d" type="tarbz2">http://cyberelk.net/tim/data/python-smbc/python-smbc-1.0.10.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>samba-devel</Dependency>
         </BuildDependencies>
     </Source>
 
     <Package>
-        <Name>pysmbc</Name>
+        <Name>python-smbc</Name>
         <RuntimeDependencies>
             <Dependency>samba</Dependency>
         </RuntimeDependencies>
+        <Replaces>
+            <Package>pysmbc</Package>
+        </Replaces>
         <Files>
             <Path fileType="library">/usr/lib</Path>
             <Path fileType="doc">/usr/share/doc</Path>
