python-papyon replaces papyon.

--- a/programming/language/python/python-papyon/pspec.xml
+++ b/programming/language/python/python-papyon/pspec.xml
@@ -27,6 +27,9 @@
             <Dependency>python-pygobject</Dependency>
             <Dependency>python-pycrypto</Dependency>
         </RuntimeDependencies>
+        <Replaces>
+            <Package>papyon</Package>
+        </Replaces>
         <Files>
             <Path fileType="library">/usr/lib</Path>
             <Path fileType="doc">/usr/share/doc</Path>
@@ -34,6 +37,13 @@
     </Package>
 
     <History>
+        <Update release="5">
+            <Date>2010-12-27</Date>
+            <Version>0.5.2</Version>
+            <Comment>python-papyon replaces papyon.</Comment>
+            <Name>H. İbrahim Güngör</Name>
+            <Email>ibrahim@pardus.org.tr</Email>
+        </Update>
         <Update release="4">
             <Date>2010-10-21</Date>
             <Version>0.5.2</Version>
