python-goocanvas replaces pygoocanvas.

--- a/programming/language/python/python-goocanvas/pspec.xml
+++ b/programming/language/python/python-goocanvas/pspec.xml
@@ -36,6 +36,9 @@
             <Dependency>gtk2</Dependency>
             <Dependency>goocanvas</Dependency>
         </RuntimeDependencies>
+        <Replaces>
+            <Package>pygoocanvas</Package>
+        </Replaces>
         <Files>
             <Path fileType="library">/usr/lib</Path>
             <Path fileType="data">/usr/lib/pkgconfig</Path>
@@ -44,6 +47,13 @@
     </Package>
 
     <History>
+        <Update release="6">
+            <Date>2010-12-27</Date>
+            <Version>0.14.1</Version>
+            <Comment>python-goocanvas replaces pygoocanvas.</Comment>
+            <Name>H. İbrahim Güngör</Name>
+            <Email>ibrahim@pardus.org.tr</Email>
+        </Update>
         <Update release="5">
             <Date>2010-11-27</Date>
             <Version>0.14.1</Version>
