python-gsl replaces pygsl.

--- a/programming/language/python/python-gsl/pspec.xml
+++ b/programming/language/python/python-gsl/pspec.xml
@@ -25,6 +25,9 @@
             <Dependency>gsl</Dependency>
             <Dependency>python-numpy</Dependency>
         </RuntimeDependencies>
+        <Replaces>
+            <Package>pygsl</Package>
+        </Replaces>
         <Files>
             <Path fileType="library">/usr/lib</Path>
             <Path fileType="doc">/usr/share/doc</Path>
@@ -43,6 +46,13 @@
     </Package>
 
     <History>
+        <Update release="3">
+            <Date>2010-12-27</Date>
+            <Version>0.9.5</Version>
+            <Comment>python-gsl replaces pygsl.</Comment>
+            <Name>H. İbrahim Güngör</Name>
+            <Email>ibrahim@pardus.org.tr</Email>
+        </Update>
         <Update release="2">
             <Date>2010-05-06</Date>
             <Version>0.9.5</Version>
