Fix archive URI

--- a/programming/language/python/python-cups/pspec.xml
+++ b/programming/language/python/python-cups/pspec.xml
@@ -3,7 +3,7 @@
 <PISI>
     <Source>
         <Name>python-cups</Name>
-        <Homepage>http://cyberelk.net/tim/software/python-cups</Homepage>
+        <Homepage>http://cyberelk.net/tim/software/pycups</Homepage>
         <Packager>
             <Name>Ozan Çağlayan</Name>
             <Email>ozan@pardus.org.tr</Email>
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Python interface to the CUPS API</Summary>
         <Description>python-cups contains python bindings to wrap the CUPS API.</Description>
-        <Archive sha1sum="020e898a9970b2107af7b7f769574519d64d4f89" type="tarbz2">http://cyberelk.net/tim/data/python-cups/python-cups-1.9.53.tar.bz2</Archive>
+        <Archive sha1sum="020e898a9970b2107af7b7f769574519d64d4f89" type="tarbz2">http://cyberelk.net/tim/data/pycups/pycups-1.9.53.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>cups-devel</Dependency>
         </BuildDependencies>
