Fix archive URI

--- a/programming/language/python/python-smbc/pspec.xml
+++ b/programming/language/python/python-smbc/pspec.xml
@@ -3,7 +3,7 @@
 <PISI>
     <Source>
         <Name>python-smbc</Name>
-        <Homepage>http://cyberelk.net/tim/software/python-smbc</Homepage>
+        <Homepage>http://cyberelk.net/tim/software/pysmbc</Homepage>
         <Packager>
             <Name>Ozan Çağlayan</Name>
             <Email>ozan@pardus.org.tr</Email>
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Python interface to the libsmbclient library</Summary>
         <Description>python-smbc is a Python binding for the libsmbclient library.</Description>
-        <Archive sha1sum="1963af6e7fcb75733d5a398ffc0c4578532bc61d" type="tarbz2">http://cyberelk.net/tim/data/python-smbc/python-smbc-1.0.10.tar.bz2</Archive>
+        <Archive sha1sum="1963af6e7fcb75733d5a398ffc0c4578532bc61d" type="tarbz2">http://cyberelk.net/tim/data/pysmbc/pysmbc-1.0.10.tar.bz2</Archive>
         <BuildDependencies>
             <Dependency>samba-devel</Dependency>
         </BuildDependencies>
