--- a/desktop/kde/l10n/kde-l10n-tr/pspec.xml
+++ b/desktop/kde/l10n/kde-l10n-tr/pspec.xml
@@ -73,6 +73,9 @@
             <Patch level="1">pangram.patch</Patch>
 
             <Patch>fix_tasks_applet.patch</Patch>
+
+            <!-- Fix for #15845 -->
+            <Patch level="1">fix-kteatime-trans.diff</Patch>
         </Patches>
     </Source>
     <Package>
@@ -98,6 +101,13 @@
         </Files>
     </Package>
     <History>
+        <Update release="62">
+            <Date>2010-12-27</Date>
+            <Version>4.5.4</Version>
+            <Comment>Fix weird KTeatime translation #15845</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="61">
             <Date>2010-12-21</Date>
             <Version>4.5.4</Version>
