--- a/programming/language/python/python-decorator/pspec.xml
+++ b/programming/language/python/python-decorator/pspec.xml
@@ -12,7 +12,10 @@
         <IsA>library</IsA>
         <Summary>Python module to simplify the usage of decorators</Summary>
         <Description>python-decorator simplifies the usage of decorators for the average programmer.</Description>
-        <Archive sha1sum="daa9d392dd2169d96888d7d776dd8beb90d2581a" type="targz">http://pypi.python.org/packages/source/d/decorator/decorator-3.1.2.tar.gz</Archive>
+        <Archive sha1sum="cb25e377fe0a2e0152ffb77789c6bb53c5f02384" type="targz">http://pypi.python.org/packages/source/d/decorator/decorator-3.2.1.tar.gz</Archive>
+        <BuildDependencies>
+            <Dependency>python-nose</Dependency>
+        </BuildDependencies>
     </Source>
 
     <Package>
@@ -24,6 +27,13 @@
     </Package>
 
     <History>
+        <Update release="4">
+            <Date>2010-12-27</Date>
+            <Version>3.2.1</Version>
+            <Comment>Version bump.</Comment>
+            <Name>Fethican Coşkuner</Name>
+            <Email>fethicanc@gmail.com</Email>
+        </Update>
         <Update release="3">
             <Date>2010-10-13</Date>
             <Version>3.1.2</Version>
