--- a/programming/language/python/python-networkmanager/pspec.xml
+++ b/programming/language/python/python-networkmanager/pspec.xml
@@ -27,11 +27,22 @@
         <Files>
             <Path fileType="library">/usr/lib/python*</Path>
             <Path fileType="executable">/usr/bin</Path>
+            <Path fileType="executable">/bin</Path>
             <Path fileType="data">/etc/bash_completion.d</Path>
         </Files>
+        <AdditionalFiles>
+            <AdditionalFile owner="root" permission="0755" target="/bin/network">network</AdditionalFile>
+        </AdditionalFiles>
     </Package>
 
     <History>
+        <Update release="7">
+            <Date>2010-12-28</Date>
+            <Version>0.0_20101021</Version>
+            <Comment>add network script</Comment>
+            <Name>Ozan Çağlayan</Name>
+            <Email>ozan@pardus.org.tr</Email>
+        </Update>
         <Update release="6">
             <Date>2010-12-23</Date>
             <Version>0.0_20101021</Version>
