--- a/programming/language/python/python-networkmanager/pspec.xml
+++ b/programming/language/python/python-networkmanager/pspec.xml
@@ -16,6 +16,9 @@
         <Patches>
             <Patch level="1">0001-nm.py-Use-self.proxy.Get-to-force-the-interface-expl.patch</Patch>
             <Patch level="1">0002-nm.py-Cosmetic-fixes.patch</Patch>
+
+            <!-- Do not fail if an unknown connection type is requested -->
+            <Patch level="1">workaround-for-unknown-connection-exception.diff</Patch>
         </Patches>
     </Source>
 
@@ -36,6 +39,13 @@
     </Package>
 
     <History>
+        <Update release="8">
+            <Date>2010-12-28</Date>
+            <Version>0.0_20101021</Version>
+            <Comment>Add a patch for workaround unknown connection type exception.</Comment>
+            <Name>Gökçen Eraslan</Name>
+            <Email>gokcen@pardus.org.tr</Email>
+        </Update>
         <Update release="7">
             <Date>2010-12-28</Date>
             <Version>0.0_20101021</Version>
