--- a/programming/language/python/python-networkmanager/pspec.xml
+++ b/programming/language/python/python-networkmanager/pspec.xml
@@ -18,7 +18,7 @@
             <Patch level="1">0002-nm.py-Cosmetic-fixes.patch</Patch>
 
             <!-- Do not fail if an unknown connection type is requested -->
-            <Patch level="1">workaround-for-unknown-connection-exception.diff</Patch>
+            <Patch>workaround-for-unknown-connection-exception.diff</Patch>
         </Patches>
     </Source>
 
