--- a/programming/language/perl/perl-PadWalker/pspec.xml
+++ b/programming/language/perl/perl-PadWalker/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Play with other peoples' lexical variables</Summary>
         <Description>PadWalker is a module which allows you to inspect (and even change!) lexical variables in any subroutine which called you. It will only show those variables which are in scope at the point of the call.</Description>
-        <Archive sha1sum="f3b981516ff31f082853d983870bccb2fd3f8a40" type="targz">mirrors://cpan/authors/id/R/RO/ROBIN/PadWalker-1.9.tar.gz</Archive>
+        <Archive sha1sum="5f1250a7e619c232463f506d36a27a66a9bb6497" type="targz">mirrors://cpan/authors/id/R/RO/ROBIN/PadWalker-1.92.tar.gz</Archive>
         <BuildDependencies>
             <Dependency version="5.12.2">perl</Dependency>
         </BuildDependencies>
@@ -31,6 +31,13 @@
     </Package>
 
     <History>
+        <Update release="8">
+            <Date>2010-12-29</Date>
+            <Version>1.92</Version>
+            <Comment>Version bump: Incorporate patches added. See Changes file for changes.</Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@pardus.org.tr</Email>
+        </Update>
         <Update release="7">
             <Date>2009-12-04</Date>
             <Version>1.9</Version>
