--- a/programming/language/perl/perl-Net-CIDR-Lite/pspec.xml
+++ b/programming/language/perl/perl-Net-CIDR-Lite/pspec.xml
@@ -12,9 +12,11 @@
         <IsA>library</IsA>
         <Summary>Perl extension for merging IPv4 or IPv6 CIDR addresses</Summary>
         <Description>The Net::CIDR package contains functions that manipulate lists of IP netblocks expressed in CIDR notation. The Net::CIDR functions handle both IPv4 and IPv6 addresses.</Description>
-        <Archive sha1sum="f385ced22a494dd7442f06a686ad39b9caf2b0b9" type="targz">mirrors://cpan/authors/id/D/DO/DOUGW/Net-CIDR-Lite-0.20.tar.gz</Archive>
+        <Archive sha1sum="6d8e98d81bf9728d81598898f11fa0559fa2bd71" type="targz">mirrors://cpan/authors/id/D/DO/DOUGW/Net-CIDR-Lite-0.21.tar.gz</Archive>
         <BuildDependencies>
             <Dependency version="5.12.2">perl</Dependency>
+            <Dependency>perl-Test-Pod</Dependency>
+            <Dependency>perl-Test-Pod-Coverage</Dependency>
         </BuildDependencies>
     </Source>
 
@@ -32,6 +34,20 @@
     </Package>
 
     <History>
+        <Update release="5">
+            <Date>2010-12-29</Date>
+            <Version>0.21</Version>
+            <Comment>Missing deps for Tests added, Version bump to Fix RT Tickets:
+                - 14535: Fix spanner clean() docs (reported by carbon at pobox.com).
+                - 25898: Undef dereference with empty object (patch by Adam Tomason).
+                - 30777: Add short_list_range() method (patch by Josef Kutej).
+                - 48308: clean() or list() before add() causes error (reported by David Cawley).
+                - 50042: spanner add() did not accept non-object (patch by Tomo.M).
+                - 52571: :: not accepted as valid IPv6 address (reported by Tim Wilde).
+            </Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@pardus.org.tr</Email>
+        </Update>
         <Update release="4">
             <Date>2009-12-04</Date>
             <Version>0.20</Version>
