--- a/programming/language/perl/perl-Text-CSV_XS/pspec.xml
+++ b/programming/language/perl/perl-Text-CSV_XS/pspec.xml
@@ -12,7 +12,7 @@
         <IsA>library</IsA>
         <Summary>Perl Module as comma-separated values manipulation routines</Summary>
         <Description>perl-Text-CSV_XS provides facilities for the composition and decomposition of comma-separated values. An instance of the Text::CSV_XS class can combine fields into a CSV string and parse a CSV string into fields.</Description>
-        <Archive sha1sum="8a3df1841e4409be5dbfd8d956d546c1fa213189" type="targz">mirrors://cpan/authors/id/H/HM/HMBRAND/Text-CSV_XS-0.79.tgz</Archive>
+        <Archive sha1sum="3f1bf572bca25df2fe8348f9c066e11f1cbea3c9" type="targz">mirrors://cpan/authors/id/H/HM/HMBRAND/Text-CSV_XS-0.80.tgz</Archive>
         <BuildDependencies>
             <Dependency version="5.12.2">perl</Dependency>
         </BuildDependencies>
@@ -31,6 +31,16 @@
     </Package>
 
     <History>
+        <Update release="2">
+            <Date>2010-12-30</Date>
+            <Version>0.80</Version>
+            <Comment>Version bump:
+                * Implement getline_all () and getaline_hr_all ()
+                * Fixed another parsing for eol = \r (RT#61525)
+            </Comment>
+            <Name>Serdar Dalgıç</Name>
+            <Email>serdar@pardus.org.tr</Email>
+        </Update>
         <Update release="1">
             <Date>2010-12-20</Date>
             <Version>0.79</Version>
