--- a/programming/language/dotnet/gmime/pspec.xml
+++ b/programming/language/dotnet/gmime/pspec.xml
@@ -23,6 +23,9 @@
     <Package>
         <Name>gmime</Name>
         <IsA>app:console</IsA>
+        <RuntimeDependencies>
+            <Dependency>gpgme</Dependency>
+        </RuntimeDependencies>
         <Files>
             <Path fileType="executable">/usr/bin</Path>
             <Path fileType="header">/usr/include</Path>
@@ -50,7 +53,7 @@
         <IsA>data:doc</IsA>
         <Summary>gmime reference documents</Summary>
         <RuntimeDependencies>
-            <Dependency releaseFrom="10">gmime</Dependency>
+            <Dependency>gmime</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="doc">/usr/share/doc</Path>
@@ -59,6 +62,13 @@
     </Package>
 
     <History>
+        <Update release="13">
+            <Date>2011-01-04</Date>
+            <Version>2.5.4</Version>
+            <Comment>Add missing runtime dep</Comment>
+            <Name>Gökmen Göksel</Name>
+            <Email>gokmen@pardus.org.tr</Email>
+        </Update>
         <Update release="12">
             <Date>2010-12-31</Date>
             <Version>2.5.4</Version>
